--- a/ClientApp/src/styles.scss
+++ b/ClientApp/src/styles.scss
@@ -1,7 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 
 /* Importing Bootstrap SCSS file. */
+@import "~bootswatch/dist/united/variables";
 @import "./node_modules/bootstrap/scss/bootstrap";
+
+@import "./node_modules/bootswatch/dist/united/bootswatch";
 
 /* Importing Datepicker SCSS file. */
 @import "node_modules/ngx-bootstrap/datepicker/bs-datepicker";
