--- a/ClientApp/src/app/components/layout/nav/nav.component.html
+++ b/ClientApp/src/app/components/layout/nav/nav.component.html
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
   <div class="container">
     <a class="navbar-brand" routerLink="/" routerLinkActive="active">DatingApp</a>
+    <a class="navbar-brand" routerLink="/errors" routerLinkActive="active">Errors</a>
       <ul  class="navbar-nav me-auto mb-2 mb-md-0">
         <ng-container *ngIf="accountService.currentUser$ | async">
           <li class="nav-item">
